WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11582
cell width / offsetTop incorrect
https://bugs.webkit.org/show_bug.cgi?id=11582
Summary
cell width / offsetTop incorrect
Robert Sayre
Reported
2006-11-12 14:49:42 PST
In Safari 2, the square's alignment is different from Firefox and Opera. The square overlap problem in WebKit nightly is probably
bug 11109
.
Attachments
Patch
(7.92 KB, patch)
2013-07-23 14:20 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2
(612.15 KB, application/zip)
2013-07-23 16:04 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion
(639.91 KB, application/zip)
2013-07-23 20:28 PDT
,
Build Bot
no flags
Details
Patch
(10.83 KB, patch)
2013-07-26 12:36 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2006-11-12 14:57:49 PST
I'm pretty sure that this is a duplicate of
bug 11109
. For now I'm just adding a dependency on it. After
bug 11109
is fixed, the test case from this bug should be checked again.
David Kilzer (:ddkilzer)
Comment 2
2007-01-26 07:42:08 PST
(In reply to
comment #1
)
> I'm pretty sure that this is a duplicate of
bug 11109
. For now I'm just adding > a dependency on it. After
bug 11109
is fixed, the test case from this bug > should be checked again.
Looking at the test case, this appears to be fixed. Note that the attachment is from B.M.O 119167.
https://bugzilla.mozilla.org/show_bug.cgi?id=119167
However, when the attachment is viewed inside an iframe (as is done when editing the attachment in Bugzilla), the red box is not positioned correctly! The red box is still rendered correctly inside the iframe in Firefox 2.0.0.1, though.
https://bugzilla.mozilla.org/attachment.cgi?id=70553&action=edit
David Kilzer (:ddkilzer)
Comment 3
2007-01-26 07:43:05 PST
(In reply to
comment #2
)
> However, when the attachment is viewed inside an iframe (as is done when > editing the attachment in Bugzilla), the red box is not positioned correctly! > The red box is still rendered correctly inside the iframe in Firefox 2.0.0.1, > though. > >
https://bugzilla.mozilla.org/attachment.cgi?id=70553&action=edit
Tested with a locally-built debug build of WebKit
r19149
with Safari 2.0.4 (419.3) on Mac OS X 10.4.8 (8L127).
David Kilzer (:ddkilzer)
Comment 4
2007-01-26 07:44:17 PST
(In reply to
comment #2
)
> However, when the attachment is viewed inside an iframe (as is done when > editing the attachment in Bugzilla), the red box is not positioned correctly! > The red box is still rendered correctly inside the iframe in Firefox 2.0.0.1, > though.
It's also rendered correctly in Opera 9.10 within an iframe.
mitz
Comment 5
2007-01-26 07:59:10 PST
(In reply to
comment #2
)
> However, when the attachment is viewed inside an iframe (as is done when > editing the attachment in Bugzilla), the red box is not positioned correctly! > The red box is still rendered correctly inside the iframe in Firefox 2.0.0.1, > though.
This only happens part of the time, and I think it has to do with either the timing of the script evaluation or a problem with the context in which eval() executes.
David Kilzer (:ddkilzer)
Comment 6
2007-01-26 08:08:08 PST
(In reply to
comment #5
)
> This only happens part of the time, and I think it has to do with either the > timing of the script evaluation or a problem with the context in which eval() > executes.
Happens nearly every time for me, but I'm guessing this is an artifact of how the test works, e.g., it doesn't reposition the red box when the layout changes. What happens on my (slow) PB G4 is that the iframe is initially narrow (with the red box positioned correctly), then the JavaScript alert appears, then after clicking Okay, the iframe expands horizontally and the red box is no longer positioned correctly.
Robert Hogan
Comment 7
2013-07-23 14:20:21 PDT
Created
attachment 207351
[details]
Patch
Build Bot
Comment 8
2013-07-23 16:04:54 PDT
Comment on
attachment 207351
[details]
Patch
Attachment 207351
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/1158443
New failing tests: editing/selection/5057506-2.html editing/selection/5057506.html
Build Bot
Comment 9
2013-07-23 16:04:57 PDT
Created
attachment 207354
[details]
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Build Bot
Comment 10
2013-07-23 20:28:51 PDT
Comment on
attachment 207351
[details]
Patch
Attachment 207351
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/1122388
New failing tests: editing/selection/5057506-2.html editing/selection/5057506.html
Build Bot
Comment 11
2013-07-23 20:28:54 PDT
Created
attachment 207369
[details]
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-08 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Robert Hogan
Comment 12
2013-07-26 12:36:21 PDT
Created
attachment 207546
[details]
Patch
Dave Hyatt
Comment 13
2013-08-26 11:14:50 PDT
Comment on
attachment 207546
[details]
Patch r=me
WebKit Commit Bot
Comment 14
2013-08-27 12:19:57 PDT
Comment on
attachment 207546
[details]
Patch Clearing flags on attachment: 207546 Committed
r154702
: <
http://trac.webkit.org/changeset/154702
>
WebKit Commit Bot
Comment 15
2013-08-27 12:20:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug